--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
 
     <img src="https://www.example.com/imagen-de-comida.jpg" alt="Deliciosa comida">
 
+
+<p>
+    Bienvenidos a Restaurant Lozano, un rincón gastronómico que combina la riqueza de la tradición culinaria mexicana con la frescura de ingredientes de alta calidad. Ubicados en el corazón de la ciudad, nos enorgullecemos de ofrecer una experiencia única donde cada platillo cuenta una historia. Nuestro menú está diseñado para satisfacer todos los paladares, desde clásicos de la cocina mexicana, como tacos y enchiladas, hasta creaciones contemporáneas que sorprenden y deleitan.
+</p>
+<p>
+    En Restaurant Lozano, cada comida es una celebración. Creemos que la buena comida se disfruta mejor en buena compañía, por lo que hemos creado un ambiente acogedor y amigable. Nuestro equipo está comprometido en ofrecerte un servicio excepcional, asegurándose de que cada visita sea inolvidable. Ya sea que estés buscando un lugar para una cena romántica, una celebración especial o simplemente un momento para disfrutar de un buen plato, aquí encontrarás el espacio perfecto.
+</p>
+<p>
+    Además, valoramos la sostenibilidad y trabajamos con proveedores locales para ofrecer productos frescos y de temporada. Así, no solo apoyamos a nuestra comunidad, sino que también garantizamos que nuestros platillos sean siempre de la mejor calidad. Ven y descubre por qué Restaurant Lozano se ha convertido en un destino preferido para los amantes de la buena comida. Te esperamos con los brazos abiertos y un menú que hará que quieras volver.
+</p>
+
+    
     <footer>
         <p>&copy; 2024 México</p>
     </footer>
